<?xml version="1.0" encoding="utf-8"?>
<!--Name: Fragment Edit Goal
    Date: 5/5/21
    Overview: Allows creation of fragments in the RemindMe application
    /-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/nav_edit_goal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- Defines a default textview for the created fragments    /-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_goal_text"
            android:text="@string/edit_goal"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/edit_goal_text"
            android:inputType="text|textAutoCorrect"
            android:id="@+id/title"/>
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/title"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
        <LinearLayout
            android:id="@+id/linear1"
            android:layout_below="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2">

            <Button
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                />
            <Button
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginTop="24dp">
            <Button
                android:id="@+id/discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                app:backgroundTint="@color/red"
                />
            <Button
                android:id="@+id/save_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_goal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                app:backgroundTint="@color/green"/>
        </LinearLayout>
        <!--android:onClick="showTimePickerDialog"-->
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>