<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<!--Name: Edit Goal Fragment
    Date: 5/5/21
    Overview: Allows creation of fragments in the RemindMe application
    /-->
=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<<<<<<< HEAD

    <!-- Defines editing a goal    /-->
=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
    <RelativeLayout
        android:id="@+id/nav_create_goal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_goal_text"
            android:text="@string/create_goal"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp" />

<<<<<<< HEAD
`  <!-- Displays a text field to enter a title for the goal  /-->
=======

>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/create_goal_text"
            android:inputType="text|textAutoCorrect"
            android:id="@+id/title"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2">

<<<<<<< HEAD
            <!-- Defines the buttons start date, start time   /-->

=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
            <Button
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:onClick="showDatePickerDialog"
                />
            <Button
                android:id="@+id/start_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_start_time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            >

<<<<<<< HEAD
            <!-- Defines the buttons end date, end time    /-->

=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
            <Button
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/end_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            android:layout_marginTop="24dp">
<<<<<<< HEAD

            <!-- Defines the buttons discard, and save    /-->
=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
            <Button
                android:id="@+id/discard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                app:backgroundTint="@color/red"
                />
            <Button
                android:id="@+id/save_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/save_goal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                app:backgroundTint="@color/green"/>
        </LinearLayout>
        <!--android:onClick="showTimePickerDialog"-->
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>