<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<!--Name: Detail Fragment
    Date: 5/5/21
    Overview: Allows creation of fragments in the RemindMe application
    /-->
=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/nav_create_goal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--                <fragment-->
        <!--                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
        <!--                    android:id="@+id/autocomplete_fragment"-->
        <!--                    android:layout_width="match_parent"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:visibility="gone"-->
        <!--                    tools:visibility="gone"-->
        <!--                    />-->
<<<<<<< HEAD

        <!-- Defines a default textview for the created fragments    /-->
=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/create_task_text"
            android:text="@string/create_task"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:scrollHorizontally="false"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/create_task_text"
            android:inputType="text|textAutoCorrect|textMultiLine"
            android:id="@+id/title"
            android:scrollHorizontally="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="description"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/title"
            android:inputType="text|textAutoCorrect|textMultiLine"
            android:id="@+id/description"
            android:scrollHorizontally="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="location"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/description"
            android:inputType="text|textAutoCorrect|textMultiLine"
            android:id="@+id/location"
            android:focusableInTouchMode="false"/>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="2"
            >

<<<<<<< HEAD
            <!-- Defines the buttons end date, end time    /-->

=======
>>>>>>> dfa28717cbe85459d4d8e893cec6b5b348abf026
            <Button
                android:id="@+id/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_date"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_end_time"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:id="@+id/goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:layout_marginStart="16dp"
            android:scrollHorizontally="false"
            android:layout_below="@+id/linear2"
            android:text="Goals:"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list"
            android:layout_below="@+id/goals"
            android:layout_marginLeft="16dp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>